# RayCaster

./: .gitignore  CMakeLists.txt  README.md
include/SFML/Window/: Window.hpp
src/: main.cpp
src/player/: player.cpp  player.h
src/render/: render.cpp  render.h
src/utils/: structs.h
